# SubSalvage

./: .gitignore  main.py  mypy.ini  pyproject.toml  requirements.in  requirements.txt  validate.py
src/subsalvage/: __init__.py
src/subsalvage/core/: interfaces.py
src/subsalvage/ocr/: easyocr_engine.py
tests/: conftest.py  test_cli.py  test_ocr_engine.py
