[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subsalvage"
version = "0.1.0"
description = "Extract subtitles from almost any video with hardcoded subtitles"
authors = [{name = "erudyey"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch",
    "torchvision", 
    "torchaudio",
    "easyocr",
    "opencv-python",
    "numpy",
    "typer[all]",
    "pyyaml",
    "ffmpeg-python",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pipdeptree",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[project.scripts]
subsalvage = "subsalvage.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[dependency-groups]
dev = [
    "easyocr>=1.7.2",
    "ffmpeg-python>=0.2.0",
    "mypy>=1.17.1",
    "opencv-python>=4.11.0.86",
    "pip-tools>=7.5.0",
    "pipdeptree>=2.28.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "ruff>=0.12.7",
    "typer[all]>=0.16.0",
]
